--- a/azure-pipelines-1.yml
+++ b/azure-pipelines-1.yml
@@ -9,7 +9,7 @@ trigger:
 variables:
  
   # Azure Resource Manager connection created during pipeline creation
-  azureSubscription: 'YourServiceConnectionName'
+  azureSubscription: 'nagesh'
   
   # Web app name
   webAppName: 'hostssapi'
